k8s/minikube/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deploy-robot
  labels:
    name: deploy-robot
