k8s/minikube/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-robot
  namespace: deploy-robot
  labels:
    app: deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy
  template:
    metadata:
      labels:
        app: deploy
    spec:
      serviceAccountName: deploy-robot
      containers:
      - name: deploy
        image: redbadger/deploy
        args:
        - agent
        ports:
        - containerPort: 3016
