k8s/minikube/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-robot
  namespace: deploy-robot
  labels:
    app: deploy
spec:
  ports:
  - port: 80
    targetPort: 3016
  selector:
    app: deploy
  type: ClusterIP
